Hooking up UI to all instance selection events

--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,10 @@
     "PluginName": "Group Swapper",
     "PluginDescription": "Swap all instances of one Group with another.",
     "PluginType": "Panel",
-    "Scripts": []
+    "Scripts": [
+        "https://formit3d.github.io/PropertiesPlus/PropertiesPlus_Client.js"
+    ]
     ,"Panel": "PLUGINLOCATION/index.html",
     "PanelIcon": "PLUGINLOCATION/img/group_swapper@2x.png",
-    "Platforms": ["Windows"]
+    "Platforms": ["Windows", "Web"]
 }
